staticPass/Parser.fsyacc.output
Output file describing compiled parser placed in Parser.fs and Parser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'STRINGLENGTHTok' (noprec):   shift 84
    action 'STRINGAPPENDTok' (noprec):   shift 88
    action 'SUBSTRINGTok' (noprec):   shift 94
    action 'STRINGEQTok' (noprec):   shift 102
    action 'STRINGLTTok' (noprec):   shift 108
    action 'NEWARRAYTok' (noprec):   reduce StmtSeq --> 
    action 'VIEWARRAYTok' (noprec):   reduce StmtSeq --> 
    action 'ARRAYREFTok' (noprec):   reduce StmtSeq --> 
    action 'ARRAYSETTok' (noprec):   reduce StmtSeq --> 
    action 'ARRAYMAXTok' (noprec):   reduce StmtSeq --> 
    action 'INSTANCEOFTok' (noprec):   shift 118
    action 'ISINTTok' (noprec):   shift 122
    action 'ISBOOLTok' (noprec):   shift 126
    action 'ISDOUBLETok' (noprec):   shift 130
    action 'ISVOIDTok' (noprec):   shift 134
    action 'ISSTRINGTok' (noprec):   shift 138
    action 'ISCLOSURETok' (noprec):   shift 142
    action 'ISARRAYTok' (noprec):   shift 146
    action 'ISOBJECTTok' (noprec):   shift 150
    action 'RETURNTok' (noprec):   shift 40
    action 'PRINTTok' (noprec):   shift 114
    action 'READLINETok' (noprec):   reduce StmtSeq --> 
    action 'NEWTok' (noprec):   reduce StmtSeq --> 
    action 'FUNCTIONTok' (noprec):   shift 49
    action 'VARTok' (noprec):   shift 29
    action 'STRINGTok' (noprec):   shift 77
    action 'IFTok' (noprec):   shift 8
    action 'ELSETok' (noprec):   reduce StmtSeq --> 
    action 'WHILETok' (noprec):   shift 21
    action 'TRUETok' (noprec):   shift 72
    action 'FALSETok' (noprec):   shift 73
    action 'IDTok' (noprec):   shift 35
    action 'BANGTok' (noprec):   shift 154
    action 'DOTTok' (noprec):   reduce StmtSeq --> 
    action 'COMMATok' (noprec):   reduce StmtSeq --> 
    action 'LPARENTok' (noprec):   shift 78
    action 'RPARENTok' (noprec):   reduce StmtSeq --> 
    action 'LCURLYTok' (noprec):   reduce StmtSeq --> 
    action 'RCURLYTok' (noprec):   reduce StmtSeq --> 
    action 'CARETTok' (noprec):   reduce StmtSeq --> 
    action 'DOUBLEEQTok' (noprec):   reduce StmtSeq --> 
    action 'EOFTok' (noprec):   shift 4
    action 'SEMICOLONTok' (noprec):   reduce StmtSeq --> 
    action 'GTTok' (noprec):   reduce StmtSeq --> 
    action 'LTTok' (noprec):   reduce StmtSeq --> 
    action 'GEQTok' (noprec):   reduce StmtSeq --> 
    action 'LEQTok' (noprec):   reduce StmtSeq --> 
    action 'EQTok' (noprec):   reduce StmtSeq --> 
    action 'ANDTok' (noprec):   reduce StmtSeq --> 
    action 'ORTok' (noprec):   reduce StmtSeq --> 
    action 'PLUSTok' (noprec):   reduce StmtSeq --> 
    action 'MINUSTok' (noprec):   reduce StmtSeq --> 
    action 'TIMESTok' (noprec):   reduce StmtSeq --> 
    action 'DIVTok' (noprec):   reduce StmtSeq --> 
    action 'DOUBLETok' (noprec):   shift 75
    action 'INTTok' (noprec):   shift 74
    action 'error' (noprec):   reduce StmtSeq --> 
    action '#' (noprec):   reduce StmtSeq --> 
    action '$$' (noprec):   reduce StmtSeq --> 

  immediate action: <none>
 gotos:
    goto start: 1
    goto Prog: 2
    goto StmtSeq: 3
    goto Expr: 5
    goto Level1: 69
    goto Level2: 163
    goto Level3: 158
    goto Level4: 168
    goto Level5: 173
    goto Level6: 179
    goto Level7: 58

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'STRINGLENGTHTok' (noprec):   accept
    action 'STRINGAPPENDTok' (noprec):   accept
    action 'SUBSTRINGTok' (noprec):   accept
    action 'STRINGEQTok' (noprec):   accept
    action 'STRINGLTTok' (noprec):   accept
    action 'NEWARRAYTok' (noprec):   accept
    action 'VIEWARRAYTok' (noprec):   accept
    action 'ARRAYREFTok' (noprec):   accept
    action 'ARRAYSETTok' (noprec):   accept
    action 'ARRAYMAXTok' (noprec):   accept
    action 'INSTANCEOFTok' (noprec):   accept
    action 'ISINTTok' (noprec):   accept
    action 'ISBOOLTok' (noprec):   accept
    action 'ISDOUBLETok' (noprec):   accept
    action 'ISVOIDTok' (noprec):   accept
    action 'ISSTRINGTok' (noprec):   accept
    action 'ISCLOSURETok' (noprec):   accept
    action 'ISARRAYTok' (noprec):   accept
    action 'ISOBJECTTok' (noprec):   accept
    action 'RETURNTok' (noprec):   accept
    action 'PRINTTok' (noprec):   accept
    action 'READLINETok' (noprec):   accept
    action 'NEWTok' (noprec):   accept
    action 'FUNCTIONTok' (noprec):   accept
    action 'VARTok' (noprec):   accept
    action 'STRINGTok' (noprec):   accept
    action 'IFTok' (noprec):   accept
    action 'ELSETok' (noprec):   accept
    action 'WHILETok' (noprec):   accept
    action 'TRUETok' (noprec):   accept
    action 'FALSETok' (noprec):   accept
    action 'IDTok' (noprec):   accept
    action 'BANGTok' (noprec):   accept
    action 'DOTTok' (noprec):   accept
    action 'COMMATok' (noprec):   accept
    action 'LPARENTok' (noprec):   accept
    action 'RPARENTok' (noprec):   accept
    action 'LCURLYTok' (noprec):   accept
    action 'RCURLYTok' (noprec):   accept
    action 'CARETTok' (noprec):   accept
    action 'DOUBLEEQTok' (noprec):   accept
    action 'EOFTok' (noprec):   accept
    action 'SEMICOLONTok' (noprec):   accept
    action 'GTTok' (noprec):   accept
    action 'LTTok' (noprec):   accept
    action 'GEQTok' (noprec):   accept
    action 'LEQTok' (noprec):   accept
    action 'EQTok' (noprec):   accept
    action 'ANDTok' (noprec):   accept
    action 'ORTok' (noprec):   accept
    action 'PLUSTok' (noprec):   accept
    action 'MINUSTok' (noprec):   accept
    action 'TIMESTok' (noprec):   accept
    action 'DIVTok' (noprec):   accept
    action 'DOUBLETok' (noprec):   accept
    action 'INTTok' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> Prog . 

  actions:
    action 'STRINGLENGTHTok' (noprec):   reduce start --> Prog
    action 'STRINGAPPENDTok' (noprec):   reduce start --> Prog
    action 'SUBSTRINGTok' (noprec):   reduce start --> Prog
    action 'STRINGEQTok' (noprec):   reduce start --> Prog
    action 'STRINGLTTok' (noprec):   reduce start --> Prog
    action 'NEWARRAYTok' (noprec):   reduce start --> Prog
    action 'VIEWARRAYTok' (noprec):   reduce start --> Prog
    action 'ARRAYREFTok' (noprec):   reduce start --> Prog
    action 'ARRAYSETTok' (noprec):   reduce start --> Prog
    action 'ARRAYMAXTok' (noprec):   reduce start --> Prog
    action 'INSTANCEOFTok' (noprec):   reduce start --> Prog
    action 'ISINTTok' (noprec):   reduce start --> Prog
    action 'ISBOOLTok' (noprec):   reduce start --> Prog
    action 'ISDOUBLETok' (noprec):   reduce start --> Prog
    action 'ISVOIDTok' (noprec):   reduce start --> Prog
    action 'ISSTRINGTok' (noprec):   reduce start --> Prog
    action 'ISCLOSURETok' (noprec):   reduce start --> Prog
    action 'ISARRAYTok' (noprec):   reduce start --> Prog
    action 'ISOBJECTTok' (noprec):   reduce start --> Prog
    action 'RETURNTok' (noprec):   reduce start --> Prog
    action 'PRINTTok' (noprec):   reduce start --> Prog
    action 'READLINETok' (noprec):   reduce start --> Prog
    action 'NEWTok' (noprec):   reduce start --> Prog
    action 'FUNCTIONTok' (noprec):   reduce start --> Prog
    action 'VARTok' (noprec):   reduce start --> Prog
    action 'STRINGTok' (noprec):   reduce start --> Prog
    action 'IFTok' (noprec):   reduce start --> Prog
    action 'ELSETok' (noprec):   reduce start --> Prog
    action 'WHILETok' (noprec):   reduce start --> Prog
    action 'TRUETok' (noprec):   reduce start --> Prog
    action 'FALSETok' (noprec):   reduce start --> Prog
    action 'IDTok' (noprec):   reduce start --> Prog
    action 'BANGTok' (noprec):   reduce start --> Prog
    action 'DOTTok' (noprec):   reduce start --> Prog
    action 'COMMATok' (noprec):   reduce start --> Prog
    action 'LPARENTok' (noprec):   reduce start --> Prog
    action 'RPARENTok' (noprec):   reduce start --> Prog
    action 'LCURLYTok' (noprec):   reduce start --> Prog
    action 'RCURLYTok' (noprec):   reduce start --> Prog
    action 'CARETTok' (noprec):   reduce start --> Prog
    action 'DOUBLEEQTok' (noprec):   reduce start --> Prog
    action 'EOFTok' (noprec):   reduce start --> Prog
    action 'SEMICOLONTok' (noprec):   reduce start --> Prog
    action 'GTTok' (noprec):   reduce start --> Prog
    action 'LTTok' (noprec):   reduce start --> Prog
    action 'GEQTok' (noprec):   reduce start --> Prog
    action 'LEQTok' (noprec):   reduce start --> Prog
    action 'EQTok' (noprec):   reduce start --> Prog
    action 'ANDTok' (noprec):   reduce start --> Prog
    action 'ORTok' (noprec):   reduce start --> Prog
    action 'PLUSTok' (noprec):   reduce start --> Prog
    action 'MINUSTok' (noprec):   reduce start --> Prog
    action 'TIMESTok' (noprec):   reduce start --> Prog
    action 'DIVTok' (noprec):   reduce start --> Prog
    action 'DOUBLETok' (noprec):   reduce start --> Prog
    action 'INTTok' (noprec):   reduce start --> Prog
    action 'error' (noprec):   reduce start --> Prog
    action '#' (noprec):   reduce start --> Prog
    action '$$' (noprec):   reduce start --> Prog

  immediate action:   reduce start --> Prog
 gotos:

state 3:
  items:
    Prog -> StmtSeq . 

  actions:
    action 'STRINGLENGTHTok' (noprec):   reduce Prog --> StmtSeq
    action 'STRINGAPPENDTok' (noprec):   reduce Prog --> StmtSeq
    action 'SUBSTRINGTok' (noprec):   reduce Prog --> StmtSeq
    action 'STRINGEQTok' (noprec):   reduce Prog --> StmtSeq
    action 'STRINGLTTok' (noprec):   reduce Prog --> StmtSeq
    action 'NEWARRAYTok' (noprec):   reduce Prog --> StmtSeq
    action 'VIEWARRAYTok' (noprec):   reduce Prog --> StmtSeq
    action 'ARRAYREFTok' (noprec):   reduce Prog --> StmtSeq
    action 'ARRAYSETTok' (noprec):   reduce Prog --> StmtSeq
    action 'ARRAYMAXTok' (noprec):   reduce Prog --> StmtSeq
    action 'INSTANCEOFTok' (noprec):   reduce Prog --> StmtSeq
    action 'ISINTTok' (noprec):   reduce Prog --> StmtSeq
    action 'ISBOOLTok' (noprec):   reduce Prog --> StmtSeq
    action 'ISDOUBLETok' (noprec):   reduce Prog --> StmtSeq
    action 'ISVOIDTok' (noprec):   reduce Prog --> StmtSeq
    action 'ISSTRINGTok' (noprec):   reduce Prog --> StmtSeq
    action 'ISCLOSURETok' (noprec):   reduce Prog --> StmtSeq
    action 'ISARRAYTok' (noprec):   reduce Prog --> StmtSeq
    action 'ISOBJECTTok' (noprec):   reduce Prog --> StmtSeq
    action 'RETURNTok' (noprec):   reduce Prog --> StmtSeq
    action 'PRINTTok' (noprec):   reduce Prog --> StmtSeq
    action 'READLINETok' (noprec):   reduce Prog --> StmtSeq
    action 'NEWTok' (noprec):   reduce Prog --> StmtSeq
    action 'FUNCTIONTok' (noprec):   reduce Prog --> StmtSeq
    action 'VARTok' (noprec):   reduce Prog --> StmtSeq
    action 'STRINGTok' (noprec):   reduce Prog --> StmtSeq
    action 'IFTok' (noprec):   reduce Prog --> StmtSeq
    action 'ELSETok' (noprec):   reduce Prog --> StmtSeq
    action 'WHILETok' (noprec):   reduce Prog --> StmtSeq
    action 'TRUETok' (noprec):   reduce Prog --> StmtSeq
    action 'FALSETok' (noprec):   reduce Prog --> StmtSeq
    action 'IDTok' (noprec):   reduce Prog --> StmtSeq
    action 'BANGTok' (noprec):   reduce Prog --> StmtSeq
    action 'DOTTok' (noprec):   reduce Prog --> StmtSeq
    action 'COMMATok' (noprec):   reduce Prog --> StmtSeq
    action 'LPARENTok' (noprec):   reduce Prog --> StmtSeq
    action 'RPARENTok' (noprec):   reduce Prog --> StmtSeq
    action 'LCURLYTok' (noprec):   reduce Prog --> StmtSeq
    action 'RCURLYTok' (noprec):   reduce Prog --> StmtSeq
    action 'CARETTok' (noprec):   reduce Prog --> StmtSeq
    action 'DOUBLEEQTok' (noprec):   reduce Prog --> StmtSeq
    action 'EOFTok' (noprec):   reduce Prog --> StmtSeq
    action 'SEMICOLONTok' (noprec):   reduce Prog --> StmtSeq
    action 'GTTok' (noprec):   reduce Prog --> StmtSeq
    action 'LTTok' (noprec):   reduce Prog --> StmtSeq
    action 'GEQTok' (noprec):   reduce Prog --> StmtSeq
    action 'LEQTok' (noprec):   reduce Prog --> StmtSeq
    action 'EQTok' (noprec):   reduce Prog --> StmtSeq
    action 'ANDTok' (noprec):   reduce Prog --> StmtSeq
    action 'ORTok' (noprec):   reduce Prog --> StmtSeq
    action 'PLUSTok' (noprec):   reduce Prog --> StmtSeq
    action 'MINUSTok' (noprec):   reduce Prog --> StmtSeq
    action 'TIMESTok' (noprec):   reduce Prog --> StmtSeq
    action 'DIVTok' (noprec):   reduce Prog --> StmtSeq
    action 'DOUBLETok' (noprec):   reduce Prog --> StmtSeq
    action 'INTTok' (noprec):   reduce Prog --> StmtSeq
    action 'error' (noprec):   reduce Prog --> StmtSeq
    action '#' (noprec):   reduce Prog --> StmtSeq
    action '$$' (noprec):   reduce Prog --> StmtSeq

  immediate action:   reduce Prog --> StmtSeq
 gotos:

state 4:
  items:
    Prog -> 'EOFTok' . 

  actions:
    action 'STRINGLENGTHTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'STRINGAPPENDTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'SUBSTRINGTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'STRINGEQTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'STRINGLTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'NEWARRAYTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'VIEWARRAYTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ARRAYREFTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ARRAYSETTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ARRAYMAXTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'INSTANCEOFTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISINTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISBOOLTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISDOUBLETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISVOIDTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISSTRINGTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISCLOSURETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISARRAYTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ISOBJECTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'RETURNTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'PRINTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'READLINETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'NEWTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'FUNCTIONTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'VARTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'STRINGTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'IFTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ELSETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'WHILETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'TRUETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'FALSETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'IDTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'BANGTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'DOTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'COMMATok' (noprec):   reduce Prog --> 'EOFTok'
    action 'LPARENTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'RPARENTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'LCURLYTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'RCURLYTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'CARETTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'DOUBLEEQTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'EOFTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'SEMICOLONTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'GTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'LTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'GEQTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'LEQTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'EQTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ANDTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'ORTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'PLUSTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'MINUSTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'TIMESTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'DIVTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'DOUBLETok' (noprec):   reduce Prog --> 'EOFTok'
    action 'INTTok' (noprec):   reduce Prog --> 'EOFTok'
    action 'error' (noprec):   reduce Prog --> 'EOFTok'
    action '#' (noprec):   reduce Prog --> 'EOFTok'
    action '$$' (noprec):   reduce Prog --> 'EOFTok'

  immediate action:   reduce Prog --> 'EOFTok'
 gotos:

state 5:
  items:
    StmtSeq -> Expr . 'SEMICOLONTok' StmtSeq
    StmtSeq -> Expr . 'DOTTok' 'IDTok' 'EQTok' Expr StmtSeq

  actions:
    action 'STRINGLENGTHTok' (noprec):   error
    action 'STRINGAPPENDTok' (noprec):   error
    action 'SUBSTRINGTok' (noprec):   error
    action 'STRINGEQTok' (noprec):   error
    action 'STRINGLTTok' (noprec):   error
    action 'NEWARRAYTok' (noprec):   error
    action 'VIEWARRAYTok' (noprec):   error
    action 'ARRAYREFTok' (noprec):   error
    action 'ARRAYSETTok' (noprec):   error
    action 'ARRAYMAXTok' (noprec):   error
    action 'INSTANCEOFTok' (noprec):   error
    action 'ISINTTok' (noprec):   error
    action 'ISBOOLTok' (noprec):   error
    action 'ISDOUBLETok' (noprec):   error
    action 'ISVOIDTok' (noprec):   error
    action 'ISSTRINGTok' (noprec):   error
    action 'ISCLOSURETok' (noprec):   error
    action 'ISARRAYTok' (noprec):   error
    action 'ISOBJECTTok' (noprec):   error
    action 'RETURNTok' (noprec):   error
    action 'PRINTTok' (noprec):   error
    action 'READLINETok' (noprec):   error
    action 'NEWTok' (noprec):   error
    action 'FUNCTIONTok' (noprec):   error
    action 'VARTok' (noprec):   error
    action 'STRINGTok' (noprec):   error
    action 'IFTok' (noprec):   error
    action 'ELSETok' (noprec):   error
    action 'WHILETok' (noprec):   error
    action 'TRUETok' (noprec):   error
    action 'FALSETok' (noprec):   error
    action 'IDTok' (noprec):   error
    action 'BANGTok' (noprec):   error
    action 'DOTTok' (noprec):   shift 44
    action 'COMMATok' (noprec):   error
    action 'LPARENTok' (noprec):   error
    action 'RPARENTok' (noprec):   error
    action 'LCURLYTok' (noprec):   error
    action 'RCURLYTok' (noprec):   error
    action 'CARETTok' (noprec):   error
    action 'DOUBLEEQTok' (noprec):   error
    action 'EOFTok' (noprec):   error
    action 'SEMICOLONTok' (noprec):   shift 6
    action 'GTTok' (noprec):   error
    action 'LTTok' (noprec):   error
    action 'GEQTok' (noprec):   error
    action 'LEQTok' (noprec):   error
    action 'EQTok' (noprec):   error
    action 'ANDTok' (noprec):   error
    action 'ORTok' (noprec):   error
    action 'PLUSTok' (noprec):   error
    action 'MINUSTok' (noprec):   error
    action 'TIMESTok' (noprec):   error
    action 'DIVTok' (noprec):   error
    action 'DOUBLETok' (noprec):   error
    action 'INTTok' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 6:
  items:
    StmtSeq -> Expr 'SEMICOLONTok' . StmtSeq

  actions:
    action 'STRINGLENGTHTok' (noprec):   shift 84
    action 'STRINGAPPENDTok' (noprec):   shift 88
    action 'SUBSTRINGTok' (noprec):   shift 94
    action 'STRINGEQTok' (noprec):   shift 102
    action 'STRINGLTTok' (noprec):   shift 108
    action 'NEWARRAYTok' (noprec):   reduce StmtSeq --> 
    action 'VIEWARRAYTok' (noprec):   reduce StmtSeq --> 
    action 'ARRAYREFTok' (noprec):   reduce StmtSeq --> 
    action 'ARRAYSETTok' (noprec):   reduce StmtSeq --> 
    action 'ARRAYMAXTok' (noprec):   reduce StmtSeq --> 
    action 'INSTANCEOFTok' (noprec):   shift 118
    action 'ISINTTok' (noprec):   shift 122
    action 'ISBOOLTok' (noprec):   shift 126
    action 'ISDOUBLETok' (noprec):   shift 130
    action 'ISVOIDTok' (noprec):   shift 134
    action 'ISSTRINGTok' (noprec):   shift 138
    action 'ISCLOSURETok' (noprec):   shift 142
    action 'ISARRAYTok' (noprec):   shift 146
    action 'ISOBJECTTok' (noprec):   shift 150
    action 'RETURNTok' (noprec):   shift 40
    action 'PRINTTok' (noprec):   shift 114
    action 'READLINETok' (noprec):   reduce StmtSeq --> 
    action 'NEWTok' (noprec):   reduce StmtSeq --> 
    action 'FUNCTIONTok' (noprec):   shift 49
    action 'VARTok' (noprec):   shift 29
    action 'STRINGTok' (noprec):   shift 77
    action 'IFTok' (noprec):   shift 8
    action 'ELSETok' (noprec):   reduce StmtSeq --> 
    action 'WHILETok' (noprec):   shift 21
    action 'TRUETok' (noprec):   shift 72
    action 'FALSETok' (noprec):   shift 73
    action 'IDTok' (noprec):   shift 35
    action 'BANGTok' (noprec):   shift 154
    action 'DOTTok' (noprec):   reduce StmtSeq --> 
    action 'COMMATok' (noprec):   reduce StmtSeq --> 
    action 'LPARENTok' (noprec):   shift 78
    action 'RPARENTok' (noprec):   reduce StmtSeq --> 
    action 'LCURLYTok' (noprec):   reduce StmtSeq --> 
    action 'RCURLYTok' (noprec):   reduce StmtSeq --> 
    action 'CARETTok' (noprec):   reduce StmtSeq --> 
    action 'DOUBLEEQTok' (noprec):   reduce StmtSeq --> 
    action 'EOFTok' (noprec):   reduce StmtSeq --> 
    action 'SEMICOLONTok' (noprec):   reduce StmtSeq --> 
    action 'GTTok' (noprec):   reduce StmtSeq --> 
    action 'LTTok' (noprec):   reduce StmtSeq --> 
    action 'GEQTok' (noprec):   reduce StmtSeq --> 
    action 'LEQTok' (noprec):   reduce StmtSeq --> 
    action 'EQTok' (noprec):   reduce StmtSeq --> 
    action 'ANDTok' (noprec):   reduce StmtSeq --> 
    action 'ORTok' (noprec):   reduce StmtSeq --> 
    action 'PLUSTok' (noprec):   reduce StmtSeq --> 
    action 'MINUSTok' (noprec):   reduce StmtSeq --> 
    action 'TIMESTok' (noprec):   reduce StmtSeq --> 
    action 'DIVTok' (noprec):   reduce StmtSeq --> 
    action 'DOUBLETok' (noprec):   shift 75
    action 'INTTok' (noprec):   shift 74
    action 'error' (noprec):   reduce StmtSeq --> 
    action '#' (noprec):   reduce StmtSeq --> 
    action '$$' (noprec):   reduce StmtSeq --> 

  immediate action: <none>
 gotos:
    goto StmtSeq: 7
    goto Expr: 5
    goto Level1: 69
    goto Level2: 163
    goto Level3: 158
    goto Level4: 168
    goto Level5: 173
    goto Level6: 179
    goto Level7: 58

state 7:
  items:
    StmtSeq -> Expr 'SEMICOLONTok' StmtSeq . 

  actions:
    action 'STRINGLENGTHTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'STRINGAPPENDTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'SUBSTRINGTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'STRINGEQTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'STRINGLTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'NEWARRAYTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'VIEWARRAYTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ARRAYREFTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ARRAYSETTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ARRAYMAXTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'INSTANCEOFTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISINTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISBOOLTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISDOUBLETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISVOIDTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISSTRINGTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISCLOSURETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISARRAYTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ISOBJECTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'RETURNTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'PRINTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'READLINETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'NEWTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'FUNCTIONTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'VARTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'STRINGTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'IFTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ELSETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'WHILETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'TRUETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'FALSETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'IDTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'BANGTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'DOTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'COMMATok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'LPARENTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'RPARENTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'LCURLYTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'RCURLYTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'CARETTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'DOUBLEEQTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'EOFTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'SEMICOLONTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'GTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'LTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'GEQTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'LEQTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'EQTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ANDTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'ORTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'PLUSTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'MINUSTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'TIMESTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'DIVTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'DOUBLETok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'INTTok' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action 'error' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action '#' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
    action '$$' (noprec):   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq

  immediate action:   reduce StmtSeq --> Expr 'SEMICOLONTok' StmtSeq
 gotos:

state 8:
  items:
    StmtSeq -> 'IFTok' . 'LPARENTok' Expr 'RPARENTok' 'LCURLYTok' StmtSeq 'RCURLYTok' StmtSeq
    StmtSeq -> 'IFTok' . 'LPARENTok' Expr 'RPARENTok' 'LCURLYTok' StmtSeq 'RCURLYTok' 'ELSETok' 'LCURLYTok' StmtSeq 'RCURLYTok' StmtSeq
